fixing issues and adding sweetalert2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Consumiendo la API de Pixabay, personalizando una galería de imágenes de Bootstrap">
+    <meta name="author" content="Lesther XM">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/album/">
     <script src="https://kit.fontawesome.com/415f4d1bf2.js" crossorigin="anonymous"></script>
+    <!-- Sweet Alert 2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
